2006-05-15  Federico Pelloni  <federico.pelloni@gmail.com>

	* foopanel/plugins/quickterminal/__init__.py: fixed icon name
	* foopanel/plugins/musiccontrol/quodlibet_dbus_wrapper.py: new wrapper using my
															   QuodLibet DBus plugin
	* foopanel/plugins/musiccontrol/widgets.py: new ScrollingLabel, now pixel-by-pixel
	* foopanel/plugins/musiccontrol/PlayerWrapper.py: removed and fixed something
	* foopanel/lib/functions.py: more precise debug output when loading plugins
	* foopanel/plugins/pager/__init__.py: added scroll-to-change-workspace feature

2006-04-23  Federico Pelloni  <federico.pelloni@gmail.com>

	* foopanel/lib/config.py: Fixed boolean value saving

2006-03-19  Federico Pelloni  <federico.pelloni@gmail.com>

	* foopanel/lib/core.py: some fixes to use properly globals.config.ontop
	* foopanel/lib/functions.py: some fixes to use properly globals.config.debug
	* foopanel/plugins/menu/__init__.py: fixed small bug to handle separators

2006-03-14  Federico Pelloni  <federico.pelloni@gmail.com>

    * General enhancements to make Foopanel installable
	* setup.py: Introduced setup system, seems workin

2006-03-05  Federico Pelloni  <federico.pelloni@gmail.com>

	* foopanel/lib/abstract.py: changed Plugin to PluginObject and AbstractPlugin to Plugin
							    added a hook to Plugin to get settings object
	* foopanel/plugins/*/__init__.py: changed abstract.AbstractPlugin to abstract.Plugin
	* foopanel/lib/dconfig.py: fixed unformatting when loading from config.xml

2006-03-03  Federico Pelloni  <federico.pelloni@gmail.com>

	* foopanel/plugins/flexible_space/__init__.py: delete unneeded "import time"

2006-03-01  Federico Pelloni  <federico.pelloni@gmail.com>

	* foopanel/plugins/*/__init__.py: fixed to support automatic settings loading
	* foopanel/__init__.py: fixed config.py import
	* foopanel/lib/dconfig.py: added DConfigLoad to load settings
							   changed "setting" to "option" to avoid confusion